Grease pencil frames selected from python are not updated in the dopesheet #103376

Closed
opened 2022-12-21 11:48:06 +01:00 by Amélie Fondevilla · 4 comments

System Information
Operating system: Linux-5.4.0-135-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03

Blender Version
Broken: version: 3.5.0 Alpha, branch: master
Worked: I don't know. (Did not work on 3.1, I have no previous version in my computer.)

Short description of error
Setting the 'select' tag of a frame does not instantly update the selected frames in the dopesheet.

Exact steps for others to reproduce the error
Open a new blender file, selecting "2D Animation" template.
In a python console, type C.active_object.data.layers['Lines'].active_frame.select = True to change the selection first frame of the first layer of the grease pencil object.
The frame does not change color in the dopesheet (grease pencil or main dopesheet).
The frame selection gets updated only if you click somewhere in the dopesheet after that.

**System Information** Operating system: Linux-5.4.0-135-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master Worked: I don't know. (Did not work on 3.1, I have no previous version in my computer.) **Short description of error** Setting the 'select' tag of a frame does not instantly update the selected frames in the dopesheet. **Exact steps for others to reproduce the error** Open a new blender file, selecting "2D Animation" template. In a python console, type `C.active_object.data.layers['Lines'].active_frame.select = True` to change the selection first frame of the first layer of the grease pencil object. The frame does not change color in the dopesheet (grease pencil or main dopesheet). The frame selection gets updated only if you click somewhere in the dopesheet after that.
Author
Member

Added subscriber: @amelief

Added subscriber: @amelief
Amélie Fondevilla self-assigned this 2022-12-21 11:49:23 +01:00

This issue was referenced by 0bcfe2788d

This issue was referenced by 0bcfe2788df225ae948c31815535532a8b02b894
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103376
No description provided.