Fix T103376: Grease pencil frames selected from python are not updated in the dopesheet

Differential Revision: https://developer.blender.org/D16832