source/blender/makesrna/intern/rna_gpencil.c
@@ -1825,6 +1825,7 @@ static void rna_def_gpencil_frame(BlenderRNA *brna)
   prop = RNA_def_property(srna, "select", PROP_BOOLEAN, PROP_NONE);
   RNA_def_property_boolean_sdna(prop, NULL, "flag", GP_FRAME_SELECT);
   RNA_def_property_ui_text(prop, "Select", "Frame is selected for editing in the Dope Sheet");
+  RNA_def_property_update(prop, NC_GPENCIL | ND_DATA, "rna_GPencil_update");
 
   /* API */
   func = RNA_def_function(srna, "clear", "rna_GPencil_frame_clear");
